messing with styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Alastair Ros-Davison</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum ea fuga quia dolores cum ipsa laborum, ullam eligendi. Minus fuga nulla est expedita aut sunt doloribus aliquid fugiat ab?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum ea fuga quia dolores cum ipsa laborum, ullam eligendi. Minus fuga nulla est expedita aut sunt doloribus aliquid fugiat ab?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum ea fuga quia dolores cum ipsa laborum, ullam eligendi. Minus fuga nulla est expedita aut sunt doloribus aliquid fugiat ab?</p>
-    
+    <h1 id="title">Alastair Ros-Davison</h1>
+    <div class="column-container">
+        <div class="column" id="column-1">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi explicabo illo, autem laboriosam deleniti minima enim voluptates nesciunt, facilis eligendi repellendus! Ipsum accusantium deleniti quo modi numquam soluta sequi?</p>
+        </div>
+        <div class="column" id="column-2">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi explicabo illo, autem laboriosam deleniti minima enim voluptates nesciunt, facilis eligendi repellendus! Ipsum accusantium deleniti quo modi numquam soluta sequi?</p>
+        </div>
+        <div class="column" id="column-3">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi explicabo illo, autem laboriosam deleniti minima enim voluptates nesciunt, facilis eligendi repellendus! Ipsum accusantium deleniti quo modi numquam soluta sequi?</p>
+        </div>
+    </div>
+
 </body>
 </html>
