--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1 id="title">Alastair Ros-Davison</h1>
-    <div class="column-container">
-        <div class="column" id="column-1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi explicabo illo, autem laboriosam deleniti minima enim voluptates nesciunt, facilis eligendi repellendus! Ipsum accusantium deleniti quo modi numquam soluta sequi?</p>
-        </div>
-        <div class="column" id="column-2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi explicabo illo, autem laboriosam deleniti minima enim voluptates nesciunt, facilis eligendi repellendus! Ipsum accusantium deleniti quo modi numquam soluta sequi?</p>
-        </div>
-        <div class="column" id="column-3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas commodi explicabo illo, autem laboriosam deleniti minima enim voluptates nesciunt, facilis eligendi repellendus! Ipsum accusantium deleniti quo modi numquam soluta sequi?</p>
+<body class="grad">
+    <div id="background-div" id="grad">
+        <div id="intro-div" class="column-container fade-in">
+            <nav class="topnav">
+                <ul>
+                  <li><a class="active" href="/">Intro</a></li>
+                  <li>//</li>
+                  <li><a href="projects">Projects</a></li> <!--todo-->
+                  <li>//</li>
+                  <li><a href="about">About</a></li> <!--todo-->
+                </ul>
+            </nav>
+            <div class="column" id="column-1">
+                <h1 id="title">Hey, I'm Alastair Ros-Davison</h1>
+                <div id="intro-info">
+                    <p class="info-subheading">3rd yr Computer Science @ Goldsmiths, University of London</p>
+                    <p class="info-subheading">Graduate Software Engineer, Student Ambassador @ FactSet 2025.</p>
+                    <p class="info-subheading">Actively developing my skills in Machine Learning, Full-Stack Web Dev and Game Dev.</p>
+                </div>
+                
+            </div>
+            <img id="myPhoto" class="below=nav" src="/assets/me.jpg">
         </div>
     </div>
-
 </body>
 </html>
