--- a/about.html
+++ b/about.html
@@ -1,60 +1,92 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body class="grad">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  </head>
+  <body class="grad">
     <div id="background-div" id="grad">
-        <div id="intro-div" class="column-container fade-in">
-            <nav class="topnav">
-                <ul>
-                  <li><a class="active" href="/">Intro</a></li>
-                  <li>//</li>
-                  <li><a href="projects">Projects</a></li> <!--todo-->
-                  <li>//</li>
-                  <li><a href="about">About</a></li> <!--todo-->
-                </ul>
-            </nav>
-            <div class="column" id="column-1">
-                <div id="about-info">
-                    <h2>About Me</h2>
-                    <p>
-                      <strong>Raised in Australia, now studying in London</strong>, my journey has been anything but ordinary. 
-                      After a decade-long career in hospitality, I decided to follow my passion for 1's & 0's and made the leap into 
-                      Computer Science with a formal education from <a href="https://www.gold.ac.uk/">Goldsmiths, University of London</a>.
-                    </p>
-                    <p>
-                      This past summer, I worked as a <strong>Software Engineer Intern at <a href="https://www.factset.com/">FactSet</a></strong> and am thrilled to be returning 
-                      as a <strong>Graduate Software Engineer in 2025</strong>. Until then, I’m keeping busy as a 
-                      <strong>FactSet Student Ambassador</strong>, helping to connect students at my university with the exciting 
-                      opportunities in finance and tech.
-                    </p>
-                    <p>
-                      My love for games is what first sparked my interest in programming, way back in the days of tinkering with RTS 
-                      game editors. It’s safe to say that curiosity has grown into a full-blown passion.
-                    </p>
-                    <ul>
-                      <li><strong>Cooking</strong> up a feast in the kitchen</li>
-                      <li>Chipping away at my ever-growing Steam library</li>
-                      <li>Singing with <strong><a href="https://readysingerone.co.uk/">Ready Singer One</a></strong> (London's nerdiest choir - catch us at Comic Con!)</li>
-                    </ul>
-                  
-                    <h2>What I'm Working On</h2>
-                    <p>
-                      I’m currently diving into <strong>generalisation in Reinforcement Learning agents</strong>, exploring how 
-                      procedurally generated training environments can improve adaptability. Alongside this, I’m:
-                    </p>
-                    <ul>
-                      <li>Building a <strong>full-stack cocktail menu creation web app</strong></li>
-                      <li>Dabbling in <strong>game development</strong></li>
-                      <li>Gearing up for the <strong><a href="https://globalgamejam.org/">Global Game Jam 2025</a></strong></li>
-                    </ul>
-                  </div>
-            </div>
-            <img id="myPhoto" class="below=nav" src="/assets/me.jpg">
+      <div id="intro-div" class="column-container fade-in">
+        <nav class="topnav">
+          <ul>
+            <li><a class="active" href="/">Intro</a></li>
+            <li>//</li>
+            <li><a href="projects">Projects</a></li>
+            <li>//</li>
+            <li><a href="about">About</a></li>
+          </ul>
+        </nav>
+        <div class="column" id="column-1">
+          <div id="about-info">
+            <h2>About Me</h2>
+            <p>
+              <strong>Raised in Australia, now studying in London</strong>, my
+              journey has been anything but ordinary. After a decade-long career
+              in hospitality, I decided to follow my passion for 1's & 0's and
+              made the leap into Computer Science with a formal education from
+              <a href="https://www.gold.ac.uk/"
+                >Goldsmiths, University of London</a
+              >.
+            </p>
+            <p>
+              This past summer, I worked as a
+              <strong
+                >Software Engineer Intern at
+                <a href="https://www.factset.com/">FactSet</a></strong
+              >
+              and am thrilled to be returning as a
+              <strong>Graduate Software Engineer in 2025</strong>. Until then,
+              I’m keeping busy as a <strong>FactSet Student Ambassador</strong>,
+              helping to connect students at my university with the exciting
+              opportunities in finance and tech.
+            </p>
+            <p>
+              My love for games is what first sparked my interest in
+              programming, way back in the days of tinkering with RTS game
+              editors. It’s safe to say that curiosity has grown into a
+              full-blown passion.
+            </p>
+            <ul>
+              <li><strong>Cooking</strong> up a feast in the kitchen</li>
+              <li>Chipping away at my ever-growing Steam library</li>
+              <li>
+                Singing with
+                <strong
+                  ><a href="https://readysingerone.co.uk/"
+                    >Ready Singer One</a
+                  ></strong
+                >
+                (London's nerdiest choir - catch us at Comic Con!)
+              </li>
+            </ul>
+
+            <h2>What I'm Working On</h2>
+            <p>
+              I’m currently diving into
+              <strong>generalisation in Reinforcement Learning agents</strong>,
+              exploring how procedurally generated training environments can
+              improve adaptability. Alongside this, I’m:
+            </p>
+            <ul>
+              <li>
+                Building a
+                <strong>full-stack cocktail menu creation web app</strong>
+              </li>
+              <li>Dabbling in <strong>game development</strong></li>
+              <li>
+                Gearing up for the
+                <strong
+                  ><a href="https://globalgamejam.org/"
+                    >Global Game Jam 2025</a
+                  ></strong
+                >
+              </li>
+            </ul>
+          </div>
         </div>
+        <img id="myPhoto" class="below=nav" src="/assets/me.jpg" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
