--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body class="grad">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  </head>
+  <body class="grad">
     <div id="background-div" id="grad">
-        <div id="intro-div" class="column-container fade-in">
-            <nav class="topnav">
-                <ul>
-                  <li><a class="active" href="/">Intro</a></li>
-                  <li>//</li>
-                  <li><a href="projects">Projects</a></li> <!--todo-->
-                  <li>//</li>
-                  <li><a href="about">About</a></li> <!--todo-->
-                </ul>
-            </nav>
-            <div class="column" id="column-1">
-                <h1 id="title">Hey, I'm Alastair Ros-Davison</h1>
-                <div id="intro-info">
-                    <p class="info-subheading">3rd yr Computer Science @ Goldsmiths, University of London</p>
-                    <p class="info-subheading">Graduate Software Engineer, Student Ambassador @ FactSet 2025.</p>
-                    <p class="info-subheading">Actively developing my skills in Machine Learning, Full-Stack Web Dev and Game Dev.</p>
-                </div>
-                
-            </div>
-            <img id="myPhoto" class="below=nav" src="/assets/me.jpg">
+      <div id="intro-div" class="column-container fade-in">
+        <nav class="topnav">
+          <ul>
+            <li><a class="active" href="/">Intro</a></li>
+            <li>//</li>
+            <li><a href="projects">Projects</a></li>
+            <li>//</li>
+            <li><a href="about">About</a></li>
+          </ul>
+        </nav>
+        <div class="column" id="column-1">
+          <h1 id="title">Hey, I'm Alastair Ros-Davison</h1>
+          <div id="intro-info">
+            <p class="info-subheading">
+              3rd yr Computer Science @ Goldsmiths, University of London
+            </p>
+            <p class="info-subheading">
+              Graduate Software Engineer, Student Ambassador @ FactSet 2025.
+            </p>
+            <p class="info-subheading">
+              Actively developing my skills in Machine Learning, Full-Stack Web
+              Dev and Game Dev.
+            </p>
+          </div>
         </div>
+        <img id="myPhoto" class="below=nav" src="/assets/me.jpg" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
