--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body class="grad">
     <div id="background-div" id="grad">
@@ -30,6 +34,25 @@
               Actively developing my skills in Machine Learning, Full-Stack Web
               Dev and Game Dev.
             </p>
+            <br />
+            <hr />
+            <div id="icon-div"><a
+              class="icon-link"
+              href="https://www.linkedin.com/in/alastair-ros-davison-4547ab1b7/"
+              ><i class="fa fa-linkedin"></i
+            ></a>
+            <a
+              class="icon-link"
+              href="https://github.com/Alastairrd"
+              ><i class="fa fa-github"></i
+            ></a>
+            <a
+              class="icon-link"
+              href="mailto:arosd001@gold.ac.uk"
+              ><i class="fa fa-envelope"></i
+                ></a
+            ></div>
+            
           </div>
         </div>
         <img id="myPhoto" class="below=nav" src="/assets/me.jpg" />
