fixes and changes

--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
               editors. It’s safe to say that curiosity has grown into a
               full-blown passion.
             </p>
+            <p>When I’m not coding, you’ll likely find me:</p>
             <ul>
               <li><strong>Cooking</strong> up a feast in the kitchen</li>
               <li>Chipping away at my ever-growing Steam library</li>
