links use new tabs

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
             <div id="icon-div"><a
               class="icon-link"
               href="https://www.linkedin.com/in/alastair-ros-davison-4547ab1b7/"
-              ><i class="fa fa-linkedin"></i
+              target="_blank"><i class="fa fa-linkedin"></i
             ></a>
             <a
               class="icon-link"
               href="https://github.com/Alastairrd"
-              ><i class="fa fa-github"></i
+              target="_blank"><i class="fa fa-github"></i
             ></a>
             <a
               class="icon-link"
               href="mailto:arosd001@gold.ac.uk"
-              ><i class="fa fa-envelope"></i
+              target="_blank"><i class="fa fa-envelope"></i
                 ></a
             ></div>
             
