--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,7 @@
         <div class="project-column">
           <a
             href="https://github.com/Alastairrd/CompProj2-PlanIt"
+            target="_blank"
             class="project-link"
           >
             <div class="project">
@@ -82,6 +83,7 @@
         <div class="project-column">
           <a
             href="https://github.com/Alastairrd/GGJ-2024---The-Grim-World-of-Dr.-Clown"
+            target="_blank"
             class="project-link"
           >
             <div class="project">
@@ -102,6 +104,7 @@
         <div class="project-column">
           <a
             href="https://github.com/Alastairrd/SimpleGPCalculator"
+            target="_blank"
             class="project-link"
           >
             <div class="project">
