--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
           </ul>
         </nav>
         <div class="project-column">
-          <a href="#" class="project-link">
+          <a href="https://github.com/Alastairrd/GS-2024-Final" class="project-link">
             <div class="project">
               <p class="project-title">Adaptive Reinforcement Learning</p>
               <p class="project-description">
